# karanta-ocr

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  test.py
bulk_processing/: main.py  run.sh
bulk_processing/scripts/: start_multiple_celery_workers.sh
bulk_processing/utils/: database.py  gpu_router.py  job_manager.py
bulk_processing/workers/: celery_app.py  inference_worker.py  vllm_client.py
configs/deepspeed/: stage3_offloading_accelerate.conf
configs/prompts/: classification_batch_inference.yaml  create_tests.yaml  open_ai_data_generation.yaml
configs/training/classification/: convnext_sft_newspaper_classifier.yaml  google_vit_base_patch16_224_classify.yaml  google_vit_base_patch16_224_sft_newspaper_classifer.yaml  pdf2_image.yaml  resnet_sft_newspaper_classifier.yaml  sample_dataset.yaml  segformer_base_sft_newpaper_classifier.yaml  segment_classification.yaml  sft_newpaper_classifier_levit_base.yaml  sft_newspaper_classifier_facebook_deit.yaml
configs/training/ocr/: dummy.yaml  karanta_set_qwen_2_5_3B_vl.yaml  karanta_set_qwen_2_5_3B_vl_1000_linear.yaml  karanta_set_qwen_2_5_3B_vl_1000_linear_muon_optimizer.yaml  karanta_set_qwen_2_5_3B_vl_1000_linear_no_base_text.yaml  karanta_set_qwen_2_5_3B_vl_all_linear_no_base_text.yaml
configs/training/segmentation/: dummy.yaml  test_trainer.yaml
karanta/: constants.py  pipeline.py
karanta/bench/: convert.py
karanta/bench/runners/: run_karanta_pipeline.py
karanta/data/: azure_data_stats.py  convert_pdf_2_image.py  create_batch_data_prompts.py  create_training_docs_azure.py  get_pdf_metadata.py  get_pdf_metadata_azure_container.py  ia_text_downloader.py  pdf2_image.py  process_pdf_utils.py  sample_existing_dataset.py  split_pdf.py  split_pdf_pages_to_images.py  test_prompts.py  utils.py
karanta/inference/: image_classifier.py
karanta/llm_clients/: azure_client.py  base.py  litellm_client.py  tgi_inference_client.py  utils.py
karanta/prompts/: anchor.py
karanta/training/: classification_args.py  data.py  data_pipeline.py  extract_bitmaps_and_create_dataset.py  muon_optimizer.py  ocr_training.py  ocr_training_args.py  pipeline_steps.py  run_image_classification.py  segmentation_args.py  sft_segmentation.py  test_trained_model.py  utils.py
newspaper-parser/: README.md
newspaper_parser/: run_image_classification.py  split_pdf_pages_to_images.py  utils.py
notebooks/: create_tests.ipynb  download_training_images copy.ipynb  download_training_images.ipynb  pdf_2_image.ipynb  poc_image_processing.ipynb
scripts/: convert_pdf_2_image.sh  data_utils.sh  finepdf_download.py  generate_dataset.sh  groundtruth_vllm.sh  internet_archive_downloader.py  pdf2_image.sh  run_vllm_init.sh  sample_dataset.sh  segment_classification.sh  sft_segementation_model.sh  start_multiple_vllm_servers.sh  train_karanta_ocr.sh  train_ocr.sh
tests/: test_classifier_unit.py
