[project]
name = "karanta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.26.0",
    "albumentations>=2.0.6",
    "datasets>=3.5.1",
    "evaluate>=0.4.3",
    "faster-coco-eval>=1.6.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pycocotools>=2.0.8",
    "scipy>=1.15.2",
    "tenacity>=9.1.2",
    "torch>=2.7.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }
