[project]
name = "karanta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.5.1",
    "evaluate>=0.4.3",
    "ftfy>=6.3.1",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pypdf>=5.4.0",
    "pyyaml>=6.0.2",
    "tenacity>=9.1.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
