[project]
name = "karanta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "aiofiles>=24.1.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.11.16",
    "aiosignal>=1.3.2",
    "async-timeout>=5.0.1",
    "attrs>=25.3.0",
    "celery>=5.5.3",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "click==8.1.2",
    "colorama>=0.4.6",
    "datasets>=3.5.0",
    "dill>=0.3.8",
    "evaluate>=0.4.3",
    "filelock>=3.18.0",
    "flower>=2.0.1",
    "frozenlist>=1.5.0",
    "fsspec>=2024.12.0",
    "fsspec[http]>=2024.12.0",
    "ftfy>=6.3.1",
    "huggingface-hub>=0.30.2",
    "idna>=3.10",
    "jinja2>=3.1.6",
    "joblib>=1.4.2",
    "jsonlines>=4.0.0",
    "markupsafe>=3.0.2",
    "mpmath>=1.3.0",
    "multidict>=6.4.1",
    "multiprocess>=0.70.16",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "openai>=1.98.0",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pillow>=11.1.0",
    "pkginfo>=1.12.1.2",
    "propcache>=0.3.1",
    "psutil>=7.0.0",
    "pyarrow>=19.0.1",
    "pypdf>=5.9.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "six>=1.17.0",
    "sympy>=1.13.1",
    "tenacity>=9.1.2",
    "threadpoolctl>=3.6.0",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "typing-extensions>=4.13.1",
    "tzdata>=2025.2",
    "urllib3>=2.3.0",
    "xxhash>=3.5.0",
    "yarl>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["karanta*"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.uv]
package = true
default-groups = ["dev"]
